fixed intial not showing problem

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -68,3 +68,7 @@ body {
 .ant-empty-image {
   margin-top: 100px;
 }
+
+.ant-splitter-panel {
+  height: 100%;
+}
